added main to html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<p>STEVEN DARNELL</p>
+<html>
+    <head>
+        <title>Steven's Casablanca page</title>
+    </head>
+
+    <body>
+        <main>
+            <h1>Casablanca</h1>
+            <p>Casablanca is an American film made in 1942 by director Michael Curtiz.
+                The film was produced by Warner Brothers, and it was based on the play
+                Everybody Comes to Rick's.  The film is regarded by many critics as one
+                of the best classic American films.  There are many aspects that make
+                Casablanca a fantastic film.</p>
+
+        <article></article>
+        </main>
+    </body>
+</html>
