added addtl html in body: cast, lines, song

--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
                 of the best classic American films.  There are many aspects that make
                 Casablanca a fantastic film.</p>
 
-        <article></article>
+        <article>
+           <header>
+            <h1>The Cast</h1>
+                <ul>
+                    <li>Ingrid Bergman</li>
+                    <li>Humphrey Boagrt</li>
+                    <li>Claude Rains</li>
+                    <li>Peter Lorre</li>
+                    <li>Paul Henreid</li>
+                    <li>Sydney Greenstreet</li>
+                    <li>Conrad Veidt</li>
+                    <li>Dooley Wilson</li>
+                </ul>
+            <h2>The Lines</h2>
+                <p>The script of Casablanca is extermely well written. In additon,
+                    it contains many meorable lines of dialog, including:</p>
+                    <ul>
+                        <li>"Of all the gin joints, in all the towns, in all the world, she walks into mine."" </li>
+                        <li>"We'll always have Paris."</li>
+                        <li>"Maybe not today. Maybe not tomorrow, but soon. And for the rest of your life."</li>
+                        <li>"It doesn't take much to see that the problems of three little people don't amount 
+                            to a hill of beans in this crazy world."</li>
+                        <li>"Here's looking at you kid."</li>
+                        <li>"Round up the usual suspects."</li>
+                        <li> ...and perhaps the most mis-quoted movie line in history: 
+                            "Play it, Sam. Play As Time Goes By"</li>
+
+            <h3>The Song</h3>
+                <p>The Song
+                    As Time Goes By has grown to be as iconic a song as Casablanca has grown to be
+                    an iconic film. It captures the pain and sweetness of an unrequited love. While
+                    Dooley Wilson (who played Sam) received the honor of playing the song in the film,
+                    many artist have covered the song throught the past 70 plus years.
+                </p>
+
+                    </ul>
+        </article>
         </main>
     </body>
 </html>
