fixed spelling errors in body

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>The Cast</h1>
                 <ul>
                     <li>Ingrid Bergman</li>
-                    <li>Humphrey Boagrt</li>
+                    <li>Humphrey Bogart</li>
                     <li>Claude Rains</li>
                     <li>Peter Lorre</li>
                     <li>Paul Henreid</li>
@@ -27,7 +27,7 @@
                 </ul>
             <h2>The Lines</h2>
                 <p>The script of Casablanca is extermely well written. In additon,
-                    it contains many meorable lines of dialog, including:</p>
+                    it contains many memorable lines of dialog, including:</p>
                     <ul>
                         <li>"Of all the gin joints, in all the towns, in all the world, she walks into mine."" </li>
                         <li>"We'll always have Paris."</li>
