--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     </head>
 
     <body>
+        <img src= "https://ia.media-imdb.com/images/M/MV5BY2IzZGY2YmEtYzljNS00NTM5LTgwMzUtMzM1NjQ4NGI0OTk0XkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" >
         <main>
             <h1>Casablanca</h1>
             <p>Casablanca is an American film made in 1942 by director Michael Curtiz.
@@ -49,6 +50,11 @@
 
                     </ul>
         </article>
+       <p>&copy 2018</p>
         </main>
+        <footer>
+            <p>posted by: Steven Darnell</p>
+            <p>contact info: heyjupiter80@yahoo.com</p>
+        </footer>
     </body>
 </html>
