finished html page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Steven's Casablanca page</title>
     </head>
 
     <body>
-        <img src= "https://ia.media-imdb.com/images/M/MV5BY2IzZGY2YmEtYzljNS00NTM5LTgwMzUtMzM1NjQ4NGI0OTk0XkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" >
+        <img src="https://ia.media-imdb.com/images/M/MV5BY2IzZGY2YmEtYzljNS00NTM5LTgwMzUtMzM1NjQ4NGI0OTk0XkEyXkFqcGdeQXVyNDYyMDk5MTU@._V1_.jpg" 
+        alt = "Casablanca movie poster from IMDB.com">
         <main>
             <h1>Casablanca</h1>
             <p>Casablanca is an American film made in 1942 by director Michael Curtiz.
@@ -50,7 +52,7 @@
 
                     </ul>
         </article>
-       <p>&copy 2018</p>
+       <p>&copy 2018 Steven Darnell</p>
         </main>
         <footer>
             <p>posted by: Steven Darnell</p>
