linked css stylesheet to index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Steven's Casablanca page</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -43,8 +44,7 @@
                             "Play it, Sam. Play As Time Goes By"</li>
 
             <h3>The Song</h3>
-                <p>The Song
-                    As Time Goes By has grown to be as iconic a song as Casablanca has grown to be
+                <p> As Time Goes By has grown to be as iconic a song as Casablanca has grown to be
                     an iconic film. It captures the pain and sweetness of an unrequited love. While
                     Dooley Wilson (who played Sam) received the honor of playing the song in the film,
                     many artist have covered the song throught the past 70 plus years.
