finished style.css

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
            <header>
             <h1>The Cast</h1>
                 <ul>
-                    <li>Ingrid Bergman</li>
-                    <li>Humphrey Bogart</li>
-                    <li>Claude Rains</li>
-                    <li>Peter Lorre</li>
-                    <li>Paul Henreid</li>
-                    <li>Sydney Greenstreet</li>
-                    <li>Conrad Veidt</li>
-                    <li>Dooley Wilson</li>
+                    <li id="name">Ingrid Bergman</li>
+                    <li id="name">Humphrey Bogart</li>
+                    <li id="name">Claude Rains</li>
+                    <li id="name">Peter Lorre</li>
+                    <li id="name">Paul Henreid</li>
+                    <li id ="name">Sydney Greenstreet</li>
+                    <li id="name">Conrad Veidt</li>
+                    <li id="name">Dooley Wilson</li>
                 </ul>
             <h2>The Lines</h2>
                 <p>The script of Casablanca is extermely well written. In additon,
