added class to html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
         alt = "Casablanca movie poster from IMDB.com">
         <main>
             <h1>Casablanca</h1>
+            <div class="intro">
             <p>Casablanca is an American film made in 1942 by director Michael Curtiz.
                 The film was produced by Warner Brothers, and it was based on the play
                 Everybody Comes to Rick's.  The film is regarded by many critics as one
                 of the best classic American films.  There are many aspects that make
                 Casablanca a fantastic film.</p>
+            </div>    
 
         <article>
            <header>
